objects/User.object
<CustomObject><fields>
        <fullName>Coach_on_leave__c</fullName>
        <formula>IF(NOW() &lt;= Leave_End_Time__c &amp;&amp; NOW() &gt;= Leave_Start_Time__c,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coach on leave</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Leave_End_Time__c</fullName>
        <label>Leave End Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Leave_Start_Time__c</fullName>
        <label>Leave Start Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Max_hours_in_a_row__c</fullName>
        <label>Max hours in a row</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Max_hours_in_a_week__c</fullName>
        <label>Max hours in a week</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>PIDM__c</fullName>
        <externalId>true</externalId>
        <label>PIDM</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>ASC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Zoom_Details__c</fullName>
        <label>Zoom Details</label>
        <type>Url</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><externalSharingModel>Read</externalSharingModel><sharingModel>Read</sharingModel><listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews><listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews><listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>User_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews><listViews>
        <fullName>Department_Mapping</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <label>Department_Mapping</label>
    </listViews><listViews>
        <fullName>InactiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
    </listViews><validationRules>
        <fullName>Leave_Start_and_End_Time_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(!ISBLANK(Leave_Start_Time__c) &amp;&amp; ISBLANK(Leave_End_Time__c),true,IF(!ISBLANK(Leave_End_Time__c) &amp;&amp; ISBLANK(Leave_End_Time__c),true,false))</errorConditionFormula>
        <errorMessage>Please enter both - Leave Start and End Time</errorMessage>
    </validationRules></CustomObject>